// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps test snapshot testing for Blue Green strategy 1`] = `
<div>
  <div
    class="steps"
  >
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.common.steps.step1.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.blueGreen.steps.step1.description
      </div>
    </div>
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.common.steps.step2.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.blueGreen.steps.step2.description
      </div>
    </div>
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.common.steps.step3.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.blueGreen.steps.step3.description
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps test snapshot testing for Canary strategy 1`] = `
<div>
  <div
    class="steps"
  >
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.canary.steps.step1.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.canary.steps.step1.description
      </div>
    </div>
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.canary.steps.step2.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.canary.steps.step2.description
      </div>
    </div>
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.canary.steps.step3.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.canary.steps.step3.description
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps test snapshot testing for Rolling strategy 1`] = `
<div>
  <div
    class="steps"
  >
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.common.steps.step1.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.rolling.steps.step1.description
      </div>
    </div>
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.common.steps.step2.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.rolling.steps.step2.description
      </div>
    </div>
    <div
      class="stepCard"
      data-testid="step-card"
    >
      <div
        class="header"
        data-testid="step-header"
      >
        pipeline.executionStrategy.strategies.common.steps.step3.title
      </div>
      <div
        class="description"
        data-testid="step-description"
      >
        pipeline.executionStrategy.strategies.rolling.steps.step3.description
      </div>
    </div>
  </div>
</div>
`;
